css/style.css
/* ... */
     .weekdayendHours  {
        float: right;       
       
     }
     
     .teacuprabbit {      
      
      width: 100%;        
      margin: auto;
      overflow: auto;
      padding-top: 50px;
      display: flex;
      justify-content: center;
     }

     .teacuprabbit img {
      max-width: 70%;
      
      
     }
   
  
 
     

section.reviews {
   padding: 10% 30% 10% 30%;
  width: 100%;
  height: 800px;
  background: rgb(201, 239, 163);
  background-image: url("../images/bunny.jpg");
  background-repeat: none;
  background-size: cover;
  
 
}

section.reviews * {
  display: block;
  text-align: center;
  

}

section.reviews h5, section.reviews span.titles {
  padding-bottom: 20px;

}

section.reviews h6, section.reviews span {
font-size: 2rem;
padding: 4px;
}

.titles {                 /* formatting for all title text except 1st page */
  font-size: 6rem;
  font-weight: 600;
}

.regularText {
  font-size: 3rem;
}

.sectionName {         /*for all the top section names "book table, about us ect" */
  font-size: 3.1rem;
  color: rgb(240, 160, 31);
  font-weight: 700;
}


#hamnav label, #hamburger { /* gets rid of hamburger */
  display: none;
}

a { /* gets rid of hyperlink styling*/
  text-decoration: none;
  color: black;
}

/******************************************
/* ADDITIONAL STYLES (images)
/*******************************************/

.cart img {
  width: auto;
  height: 35px;
  
}

img.rabbitfrontpage{
  display: none;
}
.food {
  width: 100%; /* make food images stay inside area */
  height: 100%;

}
.search img {
  width: auto;
  height: 35px;
}

div.topSecImage {
  background: url("../images/title.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  border: 2px solid rgba(0, 0, 0, 0.0) /* hidden border needed so it covers the whole div, for some reason if the border isn't there it won't cover the whole div? */

}

header .logo {
  float: left;
  height: 75px;
  margin: 0 0 0 80px;
}

.phone {
  height: 80px;  
}

.reviewimages{
border-radius: 60px;
height: 100px;
display: block;               /* three things allowed the image to be centered, display block, margin auto left and right */
margin: 0 auto;
}

.lastStars {
  display: block;   /* three things allowed the image to be centered, display block, margin auto left and right */
  margin: 0 auto;
}

.stars {
  height:40px;
  width: 150px;
}

.shopifyButton {
  padding: 1px;
}
/* having image text appear on image when it is hovered over */

.img__wrap {
  position: relative;
  max-height: 300px;
  max-width: 300px;
  
}

.img__description_layer {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(36, 62, 206, 0.6);
  color: #fff;
  visibility: hidden;
  opacity: 0;  
  text-align: center;
  padding-top: 40px;


}

.img__wrap:hover .img__description_layer {
  visibility: visible;
  opacity: 1;
}



.img__description {
  transition: .2s;
  transform: translateY(1em);
}

.img__wrap:hover .img__description {
  transform: translateY(0);
}




@media screen and (max-width: 1314px) {

header li {
  margin: 0%;
  text-align: left;
  padding: 1%;
  font-size: 2rem;
}
.welcomeBox {
  width: 100%;
  height: 60%;
  
}

.welcome h1 {
  font-size: 6rem;
}
.foodPictures{ /* #################*/
  margin: 0px;
}

.welcome li {
  margin: 2%;
  font-size: 3rem;
}

.welcome img {
  height: 20px;
  padding: 0%;
}
input {
  width: 70%;
  display: inline;
 }

.buttonTop {
  display: inline;
  width: 35%;
   padding: 4px 80px 4px 60px; 
   text-align: center;
 
  
}

.buttonIn {
  width: 100%;
  margin-left: 0%;
  

}

.discoverTextBox {
 
    position: relative;
 
   
    margin: 5% 5% 5% 0%;
    
}

section.hours {
  padding: 0%;
}
iframe {
  max-width: 90vw; /* force iframe/video to fit within 90% of width of viewport*/
}

section.reviews {
  padding: 0%;
}
}

@media screen and (max-width:800px) {
  section.foodPictures section {
    
    margin-left: 5%;
    font-size: 2.3rem;
    margin-right: 0%;
   
  }


div.topSecImage {
  background-color: white;
  background: url("../images/bunbackgroundtop.png");

}

  section.foodPictures  {
    grid-template-columns: repeat(2,1fr);
    column-gap: 0px;
    row-gap: 3px;
  }
}



@media screen and (max-width: 900px){
  /* (A) BREAK INTO VERTICAL MENU */
  #hamitems li {
    box-sizing: border-box;     
    display: block;
    width: 100%;
    border-top: 1px solid #333;
    text-align: center;
   
  
  }

  header {
    height: 100%;
  }

  
/* (B) SHOW HAMBURGER ICON */
#hamnav label { 
display: inline-block; 
color: black;
font-style: normal;
font-size: 1.5em;
padding: 10px;


}

.logo {
  display: none;
}

/* (C) TOGGLE SHOW/HIDE MENU */
#hamitems { display: none; }
#hamnav input:checked ~ #hamitems { display: block;
margin-bottom: 50px; }

}

#product-component-1657522267168 {
  margin: 2px solid green;
}


/* CAROSUEL REVIEW */
    .carrousel {
      background: #ffffff;
      text-align: center;
      padding: 4em 0;
      height: auto;
      max-width: 750px;
      
      position: relative;
      overflow: hidden;
      margin: 0;
    }
    .carrousel h2 {
      margin: 0;
      margin-top: -1.7em;
      padding: 0;
      font-size: 1em;
      text-align: center;
      color: #bbbbbb;
    }
    .carrousel .slides {
      width: 400%;
      left: 0;
      padding-left: 0;
      padding-top: 1em;
      overflow: hidden;
      list-style: none;
      position: relative;
   
     
      -webkit-transition: transform .5s;
      -moz-transition: transform .5s;
      -o-transition: transform .5s;
      transition: transform .5s;
    }
    .carrousel .slides li {
      width: 25%;
      position: relative;
      float: left;
    }
    .carrousel li p{
      margin-top: 0;  
    }
    .carrousel li q {
      max-width: 90%;
      margin: auto;
      color: #666666;
      font-size: 1.3em;
      font-weight: bold;
    }
/* ... */

